<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eclipse Profit</string>
    <string name="app_version">v0.1.0</string>
    <string name="action_about">About</string>
    <string name="action_changelog">Changelog</string>
    <string name="action_donate">Donate</string>
    <string name="action_calculate">Calculate</string>
    <string name="label_miner_speed">Miner speed</string>
    <string name="label_exchange_rate">Exchange rate</string>
    <string name="label_miner_cost">Cost of miner (optional)</string>
    <string name="label_$">$</string>
    <string name="label_estimated_dgm">Estimated DGM</string>
    <string name="label_daily_btc">Daily BTC</string>
    <string name="label_daily_usd">Daily USD</string>
    <string name="label_days">Return on investment</string>
    <string name="hint_ghs">Gh/s</string>
    <string name="hint_usd">USD</string>

</resources>
