<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.devinshoe.bitcoinprofit.app.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_miner_speed"
        android:id="@+id/tvMinerSpeed"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/etGhs"
        android:text="@string/hint_ghs"
        android:layout_alignBottom="@+id/tvMinerSpeed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_exchange_rate"
        android:id="@+id/tvExchangeRate"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tvMinerSpeed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/tv$"
        android:layout_alignBottom="@+id/tvExchangeRate"
        android:layout_toLeftOf="@+id/etUsd" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/etUsd"
        android:hint="USD"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/etGhs"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/hint_usd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_miner_cost"
        android:id="@+id/tvMinerCost"
        android:layout_below="@+id/tvExchangeRate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_$"
        android:id="@+id/tv$2"
        android:layout_alignTop="@+id/tvMinerCost"
        android:layout_toLeftOf="@+id/etUsd" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/etMinerCost"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/etUsd"
        android:layout_alignLeft="@+id/etUsd"
        android:layout_alignStart="@+id/etUsd"
        android:text="@string/hint_usd" />

</RelativeLayout>
